deployment.yml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloprofile
  namespace: default
  labels:
    app: helloprofile
  annotations:
    deployment.kubernetes.io/revision: "1"
    persianblackid: io.helloprofile.backend.deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: helloprofile
  template:
    metadata:
      labels:
        name: helloprofile
    spec:
      volumes:
        - name: helloprofile-logs-backend
          persistentVolumeClaim:
            claimName: helloprofile-logs
      containers:
        - name: helloprofile
          image: ghcr.io/daprinz01/helloprofile:main
          ports:
            - containerPort: 8083
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 15Mi
            requests:
              cpu: 100m
              memory: 10Mi
          volumeMounts:
            - name: helloprofile-logs-backend
              mountPath: /usr/local/bin/log
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: githubregistrycredential
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
