service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: helloprofile
  namespace: default
  labels:
    app: helloprofile
  annotations:
    persianblackid: io.helloprofile.backend.service
spec:
  ports:
    - name: port-8083
      protocol: TCP
      port: 8083
      targetPort: 8083
  selector:
    name: helloprofile
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
