ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloprofile
  namespace: default
  labels:
    app: helloprofile
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    persianblackid: io.helloprofile.backend.ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test.api.helloprofile.io
      secretName: helloprofile-ingress
  rules:
    - host: test.api.helloprofile.io
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: helloprofile
                port:
                  number: 8083
